# SDL_Base

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_sdl3.ps1  install_sdl3.sh
include/: Settings.h  ansi.h  app.h  button.h  color.h  element.h  frame.h  geometry.h  image.h  init.h  input.h  input_box.h  layout.h  layout_test_frame.h  list.h  logger.h  main_frame.h  map.h  other_frame.h  resource_manager.h  second_frame.h  string_builder.h  style.h  text.h  timer.h  types.h  utils.h
src/: app.c  button.c  element.c  frame.c  geometry.c  image.c  init.c  input.c  input_box.c  layout.c  layout_test_frame.c  list.c  logger.c  main.c  main_frame.c  map.c  other_frame.c  resource_manager.c  second_frame.c  string_builder.c  style.c  text.c  timer.c  utils.c
